--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,4 @@
-node_modules
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+node_modules/
+build/
+.env
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
